2002-11-13  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (html_image_factory_register): small cleanups for
	new stream logic.

	* gtkhtml-enums.h: add begin types enum.

	* gtkhtml.h: begine to move some items into a group that we can
	hopefully remove.

	* gtkhtml.c (gtk_html_begin_full): add the start of a replacement
	for gtk_html_begin_content.

2002-11-13  Not Zed  <NotZed@Ximian.com>

	* htmltokenizer.h: Use g object cast checks, not gtk object ones.

2002-11-11  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (idle_handler): flush the draw queue before we scroll
	to reduce drawing artifacts

2002-11-11  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c (draw_text): fixed
	GTK_HTML_FONT_STYLE_STRIKEOUT

2002-11-07  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_o): free the value.

	* htmlselect.c (html_select_set_text): free the placeholder before
	we overwrite it.

	* htmlgdkpainter.c (draw_text): free the glyphs and items we
	create.

2002-11-07  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (calc_word_width): calc ascent/descent for empty
	texts

2002-11-07  Larry Ewing  <lewing@ximian.com>

	* htmlselect.c (html_select_set_text): clear the requisition size
	whenever we add a string.

	* htmltextinput.c: fix the requested width calculation.

2002-11-06  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c: use lower level pango iface

	* libgtkhtml.pc.in (gtkhtml_datadir): added gtkhtml_datadir
	(NotZed)

2002-11-05  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (selection_received): pad citations with a <br> to
	avoid agressive merging.

	* htmlobject.c: remove html_object_calc_intersection and replace
	with html_object_intersect that uses GdkRectangle.

	* htmlobject.h: fix prototypes.
	
	* htmlimage.c: replace ArtIRect with GdkRectangle.

	* htmltable.c: replace ArtIRect with GdkRectangle.

	* htmltablecell.c: replace ArtIRect with GdkRectangle.

	* htmltextslave.c: replace ArtIRect with GdkRectangle.
