@@ -1,3 +1,7 @@
+2002-11-14  Radek Doulik  <rodo@ximian.com>
+
+	* gtkhtml.c (gtk_html_command): fix GEnumClass retrieval
+
 2002-11-13  Larry Ewing  <lewing@ximian.com>
 
 	* htmlimage.c (html_image_factory_register): small cleanups for
